[package]
name = "background-point-filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-loader = { version = "0.1.4", features = ["json5"] }
nalgebra = "0.32.3"
noisy_float = { version = "0.2.0", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
# common-types = { version = "0.1.0", path = "../common-types" }
dashmap = "5.4.0"
