[package]
name = "filter-expr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
nalgebra = "0.30.1"
noisy_float = { version = "0.2.0", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
pest = "2.7.3"
pest_derive = "2.7.3"
anyhow = "1.0.75"
# common-types = { version = "0.1.0", path = "../common-types" }

[dev-dependencies]
serde_json = "1.0.107"
