[package]
name = "generic-point-filter"
version = "0.3.0"
edition = "2021"
authors = ['Lin Hsiang-Jui <jerry73204@gmail.com>']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
static-point-filter = { version = "0.1.0", path = "../static-point-filter" }
itertools = "0.10.5"
noisy_float = { version = "0.2.0", features = ["serde"] }
range-point-filter = { version = "0.1.0", path = "../range-point-filter" }
serde = { version = "1.0.152", features = ["derive"] }
nalgebra = "0.32.3"
num = "0.4.1"
kiss3d = { version = "0.35.0", optional = true }

[dependencies.newslab-serde-nalgebra]
git = "https://github.com/NEWSLabNTU/newslab-serde.git"
rev = "v0.1.0"

[dev-dependencies]
glob = "0.3.1"
json5 = "0.4.1"
pcd-rs = { version ="0.10.0",features = ["derive"] }

[features]
with-kiss3d = ["kiss3d", "range-point-filter/with-kiss3d"]
