[package]
name = "point-filter-tool"
version = "0.3.1"
edition = "2021"
authors = ['philly12399 <philly12399@gmail.com>', 'Lin Hsiang-Jui <jerry73204@gmail.com>']

[dependencies]
anyhow = "1.0.69"
flume = "0.10.14"
itertools = "0.10.5"
kiss3d = "0.35.0"
clap = { version = "4.4.1", features = ["derive"] }
json5 = "0.4.1"
pcd-rs = { version ="0.10.0",features = ["derive"] }
nalgebra = "0.32.3"
generic-point-filter = { version = "0.3.0", path = "../generic-point-filter", features = ["with-kiss3d"] }

[dependencies.kiss3d-utils]
version = "0.1.0"
git = "https://github.com/NEWSLabNTU/kiss3d-utils.git"
rev = "v0.1.0"
