
[package]
name = "range-point-filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-loader = { version = "0.1.4", features = ["json5"] }
kiss3d = { version = "0.35.0", optional = true }
kiss3d-utils = { version = "0.1.0", git = "https://github.com/jerry73204/kiss3d-utils.git", rev = "v0.1.0", optional = true }
log = { version = "0.4.17", optional = true }
nalgebra = "0.30.1"
noisy_float = { version = "0.2.0", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
anyhow = "1.0.75"
filter-expr = { version = "0.1.0", path = "../filter-expr" }
itertools = "0.11.0"
# common-types = { version = "0.1.0", path = "../common-types" }

[features]
with-kiss3d = ["kiss3d", "kiss3d-utils", "log"]

[dev-dependencies]
json5 = "0.4.1"
